# treino-auto-python

./: README.md  pyproject.toml
.github/workflows/: automacao.yml
Dashboard/: app.py
relatorio/: relatorio.html  relatorio.qmd
relatorio/relatorio_files/libs/bootstrap/: bootstrap-0344964fbe1bd3197c7f7eb37b1a8d49.min.css  bootstrap-093d7d6f005c8e20f0bdb7b0f73daf6d.min.css  bootstrap-6efb3eb1c1eb3cec2cea84da04aa3a12.min.css  bootstrap-7652e545d7a985ff4e6303a52640293d.min.css  bootstrap-79631d6467dfebb76e229dfedc6d3f1c.min.css  bootstrap-7f21b29fe6314057916b53e8c3247ebc.min.css  bootstrap-8a71354132ba115d2c0815b58a707534.min.css  bootstrap-90b9915d3fd267bd18d3e3b3011d0a35.min.css  bootstrap-91497dd5b905692fe19da4112cae8783.min.css  bootstrap-ade001ba22c7aac7aad8b2d529ccf530.min.css  bootstrap-b5b6aa1fa63cae6cafe56ef3109cff21.min.css  bootstrap-dd65d006d49fb09cc8c23400b03c0094.min.css  bootstrap-e4f12c94f667251ccc84972800e2aa5b.min.css  bootstrap-eac6a27995393793888f9d99c7f1e7c0.min.css  bootstrap-ecea8785ae3f50661cb15649fae83aba.min.css  bootstrap-f3459e6210f4c794a6d93e33e3a2c47e.min.css
