[project]
name = "treino-auto-python"
version = "0.1.0"
description = "N/A"
authors = [
    {name = "EltonJorge",email = "eltonoliveirajorge@hotmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "plotnine (>=0.14.5,<0.15.0)",
    "python-bcb (>=0.3.0,<0.4.0)",
    "shiny (>=1.2.1,<2.0.0)",
    "dbnomics (>=1.2.5,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
